@@ -2,6 +2,6 @@ bin_PROGRAMS = redir
 
 redir_SOURCES = redir.c
 
-docdir = $(prefix)/redir
+docdir = $(prefix)/doc/redir
 
 doc_DATA = README
