@@ -2,6 +2,6 @@ bin_PROGRAMS = reimp
 
 reimp_SOURCES = ar.c reimp.c reimp.h util.c
 
-docdir = $(prefix)/reimp
+docdir = $(prefix)/doc/reimp
 
 doc_DATA = README
