@@ -2,6 +2,6 @@ bin_PROGRAMS = res2coff
 
 res2coff_SOURCES = objimage.c protos.h res2coff.c res2coff.h resimage.c
 
-docdir = $(prefix)/res2coff
+docdir = $(prefix)/doc/res2coff
 
 doc_DATA = README
